# talloc-win

./: .appveyor.yml  .editorconfig  CMakeLists.txt  appveyor.yml  talloc.c  talloc.h  talloc_testsuite.h  testsuite.c  testsuite_main.c
